--- a/.env.dev
+++ b/.env.dev
@@ -5,7 +5,7 @@ NODE_ENV=production
 VITE_API_BASEPATH=dev
 
 # 打包路径
-VITE_BASE_PATH=/dist-dev/
+VITE_BASE_PATH=./
 
 # 是否删除debugger
 VITE_DROP_DEBUGGER=false
